# python-newick

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  newick.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: python-package.yml
fixtures/: tree-glottolog-newick.txt
src/: newick.py
tests/: test_nescent.py  test_newick.py
tests/fixtures/: ar53_r207.tree  mrbayes.nwk  tree-glottolog-newick-noquotes.txt
