[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.6
testpaths = tests
mock_use_standalone_module = true
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    newick
    tests

[coverage:report]
show_missing = true
