[metadata]
name = newick
version = 1.7.2.dev0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = A python module to read and write the Newick format
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files = LICENSE
url = https://github.com/dlce-eva/python-newick
project_urls =
    Bug Tracker = https://github.com/dlce-eva/python-newick/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
py_modules =
    newick
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    build
    tox
    flake8
    wheel>=0.36
    twine
test =
    pytest>=3.6
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov
markers =
    slow: mark test as slow.

[easy_install]
zip_ok = false

[coverage:run]
source =
    newick
    tests

[coverage:report]
show_missing = true

[tox:tox]
envlist = py37, py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
